--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div class="container">
         <div class="header">
             <h1>Vendor Evaluation Analysis - Functional Criteria</h1>
-            <p>Comprehensive functional capabilities assessment across all CFO evaluations</p>
+            <p>Comprehensive capabilities assessment across all CFO evaluations, excluding Commercials</p>
         </div>
                 <!-- Key Insights -->
         <div class="card">
@@ -732,4 +732,5 @@
     </script>
 </body>
 </html>
+
 
