--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Vendor Evaluation Analysis - Functional Criteria</h1>
+            <h1>Vendor Evaluation Analysis</h1>
             <p>Comprehensive capabilities assessment across all CFO evaluations, excluding Commercials</p>
         </div>
                 <!-- Key Insights -->
@@ -732,5 +732,6 @@
     </script>
 </body>
 </html>
+
 
 
